# FR

./: .env  01_face_dataset.py  02_face_training.py  03_face_recognition.py  pyproject.toml
tests/: test_fr.py
