[tool.poetry]
name = "fr"
version = "0.1.0"
description = ""
authors = ["qusai <qeshtaqusai0@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
numpy = "^1.21.3"
opencv-python = "^4.5.4"
Pillow = "^8.4.0"
opencv-contrib-python = "^4.5.4"
twilio = "^7.3.0"
python-dotenv = "^0.19.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
